--- a/sections/metafield-product.liquid
+++ b/sections/metafield-product.liquid
@@ -747,6 +747,8 @@
   	{% if product.metafields.my_fields.features_section_4 != blank %}
 		{{ product.metafields.my_fields.features_section_4 }}
     {% endif %}
+  <section class="yotpo-containers page-width section-{{ section.id }}-padding">
+    <h2>Reviews and Questions</h2>
   	<div class="yotpo yotpo-main-widget" data-product-id="{{ product.id }}" data-name="{{ product.title | escape }}" data-url="{{ shop.url }}{{ product.url }}" data-image-url="{{ product.featured_image | product_img_url: "large" |replace: '?', '%3F' | replace: '&','%26'}}" data-description="{{ product.description | escape }}"></div>
     <section>
       <h2>Feel the #Saunaspace Love</h2>
@@ -756,6 +758,7 @@
     </div>
 
     </section>
+  </section>
 
   
 
