--- a/assets/base.css
+++ b/assets/base.css
@@ -6078,7 +6078,12 @@ a#cart-icon-bubble {
 }
 
 
-
+.price--end{
+	font-family: lft-etica-mono,sans-serif;
+}
+.cart__footer {
+	padding-top: 0;
+}
   .cart-count-bubble {
     color: #000;
     font-size: 13px;
@@ -6094,12 +6099,17 @@ a#cart-icon-bubble {
 }
       #bcpo .bcpo-dd ul li {
     max-width: 200px;
+	border-radius: 0;
+}
+
+#bcpo .bcpo-images {
+	margin: 5px auto 0;
 }
       main#MainContent.sticky .stickyBG.stickyBG-visible {
-    transform: translateY(-23px);
+    transform: translateY(-22px);
 }
       main#MainContent.sticky .stickyBG.stickyBG-visible {
-    transform: translateY(-23px);
+    transform: translateY(-22px);
     z-index: 333 !important;
 }
   @media only screen and (min-width 991px) and (max-width 1100px){    
