--- a/assets/dark.css
+++ b/assets/dark.css
@@ -27,10 +27,17 @@
   .dark .research-topics, .dark .topicLink, .dark .research-link a, .dark .research-link p, .dark .genericText, .dark .warranty-box, 
   .dark .warranty-col, .dark .legalText, .dark .fineprint, .dark .two-cols-narrow .col, .dark .contact-col, .dark .contact-cols-text,
   .dark .contact-tile, .dark .col-bordered a, .dark .event-box, .dark .event-link, .dark .event-invite, h4, .dark .sgl-text,
-  .dark .sauna-types td, .dark .sauna-types th, .dark .research-links h3, .dark .darkP, .dark .header__icon, .dark .pt-price, .dark .price, .dark .card-information>.price, .dark .price--on-sale .price-item--regular, .dark td.cart-item__price .product-option, .dark .product-info-details, .dark .pot-col a, .dark .cart-count-bubble {
-  	color: #FFF8E7;
+  .dark .sauna-types td, .dark .sauna-types th, .dark .research-links h3, .dark .darkP, .dark .header__icon, .dark .pt-price, .dark .price, .dark .card-information>.price, .dark .price--on-sale .price-item--regular, .dark td.cart-item__price .product-option, .dark .product-info-details, .dark .pot-col a, .dark .cart-count-bubble,
+	.dark td.cart-item__details .product-option, .dark .quantity__button, .dark .quantity__input{
+  	color: #FFF8E7 !important;
   }
-  
+  .dark .stickyBG .pt-price, .dark .stickyBG .price{
+    color:#000 !important;
+  }
+  .dark .stickyBG .price--on-sale .price-item--regular{
+    color:#000 !important;
+  }
+
   .dark .nav-link:hover, .dark .rcat-link:hover, .dark .product-info-tab:hover, .dark .product-info-tab-on, .dark .nav-arrow-link:hover,
   .dark .page-anchor:hover, .dark .rcat-link-on, .dark .util-nav-link:hover, .dark .nav-cart:hover, .dark .sf-link:hover span, .dark .color-choice-on,
   .dark .product-info-tabs, .dark .research-links h3 {
