--- a/sections/main-product.liquid
+++ b/sections/main-product.liquid
@@ -221,6 +221,9 @@
             <h1 class="product__title" {{ block.shopify_attributes }}>
               {{ product.title | escape }}
             </h1>
+            {% if product.metafields.my_fields.why_we_love_it != blank %}
+              <p>{{ product.vendor | escape }}</p>
+            {%- endif -%}
           {%- when 'price' -%}
             <div class="no-js-hidden" id="price-{{ section.id }}" role="status" {{ block.shopify_attributes }}>
               {%- render 'price', product: product, use_variant: true, show_badges: false, price_class: 'price--large' -%}
@@ -243,7 +246,7 @@
             </div>
             {% if product.metafields.my_fields.color_varies_text == true %}
               <style>
-                .price .price__container::after {
+               .product__info-wrapper .price .price__container::after {
                   content: "price varies by color";
                   font-family: 'UntitledSans', sans-serif;
                   display: block;
@@ -509,7 +512,7 @@
               </product-form>
 
               {{ 'component-pickup-availability.css' | asset_url | stylesheet_tag }}
-
+		
               {%- assign pick_up_availabilities = product.selected_or_first_available_variant.store_availabilities | where: 'pick_up_enabled', true -%}
 
               <pickup-availability class="product__pickup-availabilities no-js-hidden"
@@ -557,18 +560,32 @@
          
 				
         {%- endfor -%}
-<div class="op-30day"><div><strong>Order Processing:</strong> <span id="orderProcessing">
-  {% if product.metafields.lead-time.leadtime != blank %}
- {{product.metafields.lead-time.leadtime}}.
- {% else %}
-  1–3 days.
-  {% endif %}
-</span>  
-<p class="fineprint oos-fineprint"  style="width: 100%; margin-top: .5em; ">Processing time is an estimate of time between your order being placed and your product being shipped.</p>          
-</div>
-
+            <div class="op-30day"><div><strong>Order Processing:</strong> <span id="orderProcessing">
+              {% if product.metafields.lead-time.leadtime != blank %}
+            {{product.metafields.lead-time.leadtime}}.
+            {% else %}
+              1–3 days.
+              {% endif %}
+            </span>  
+            <p class="fineprint oos-fineprint"  style="width: 100%; margin-top: .5em; ">Processing time is an estimate of time between your order being placed and your product being shipped.</p>          
+            </div>
+              
 						</div>
             <hr/>
+            {% if product.metafields.my_fields.sidebar_description == true %}
+              <div style="text-align: left;">
+                <p><strong>Details</strong></p>
+                {{ product.description }}
+
+              </div>
+             {% endif %}
+            {% if product.metafields.my_fields.why_we_love_it != blank %}
+              <div class="wwli">
+                <div class="wwli-head">Why We Love It</div>
+                <p> {{product.metafields.my_fields.why_we_love_it}} </p>
+              </div>
+            {% endif %}
+
 				<div class="pay-over-time">
 					<div class="pot-head">Pay Over Time</div>
 					<div class="pot-col">
@@ -599,12 +616,12 @@
     </div>
   </div>
 <section>
-  {%- if product.description != blank -%}
+  {%- if product.metafields.my_fields.sidebar_description != true -%}
 		<div class="pcDescription">       
              {{ product.description }}          
 	
 			</div>
-        {%- endif -%}
+  {%- endif -%}
 	</section>
   <product-modal id="ProductModal-{{ section.id }}" class="product-media-modal media-modal">
     <div class="product-media-modal__dialog" role="dialog" aria-label="{{ 'products.modal.label' | t }}" aria-modal="true" tabindex="-1">
@@ -704,25 +721,10 @@
 {% if product.media.size > 0 %}
   <script src="{{ 'media-gallery.js' | asset_url }}" defer="defer"></script>
 {% endif %}
-
+{% include 'product-page' %}
 <script>
-$(document).ready(function() {
-setTimeout(
-  function() { 
-    $( $('.bcpo-title') ).each(function( i ) {
-    if ( $(this).text() == "Plug Type:" ) {
-      console.log('text found');
-      $(this).addClass('plug-' + i);
-      $(this).text('Select your plug type:');
-    } else if( $(this).text() == "Curtain Type:" || $(this).text() == "Type:" ) {
-      $(this).text('Select your curtain type:');
-      $( "<style>#bcpo .bcpo-dropdown { order: unset;} }</style>" ).appendTo( "head" );      
-    }
 
-})}, 500);
-
-});
-  function potMore(f) {
+function potMore(f) {
 	$(".pot-col").addClass("hideMe");
 	$("#" + f + "Col").removeClass("hideMe");
 }
